Ozhaev Zaynudin Sharik5.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:89:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball1, &ball3, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:90:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball1, &ball4, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:92:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball2, &ball1, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:93:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball2, &ball3, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:94:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball2, &ball4, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:96:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball3, &ball1, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:97:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball3, &ball2, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:98:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball3, &ball4, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:100:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball4, &ball1, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:101:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball4, &ball2, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:102:41: error: too many arguments to function 'void CollisionBall(Ball*, Ball*)'
         CollisionBall(&ball4, &ball3, dt);
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:20:6: note: declared here
 void CollisionBall(Ball* ball_1, Ball* ball_2);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:228:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
     double d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; //гипотенуза
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp:246:43: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                           ^
---------------------------------------------------------------------------------------------
[11.06.2021 17:59:16,44 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik5.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
